test/TestPhases/parser/invalid/nonclosedcomment.blc
module nonclosedcomment

function f()
    var x: int32
    /* 
    x = 42
end
